k8s/matchvote/service.yml
apiVersion: v1
kind: Service
metadata:
  name: matchvote
  labels:
    app: matchvote
    env: prod
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http-server
  selector:
    app: matchvote
    env: prod
