k8s/matchvote/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: matchvote-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-8f1351a0,subnet-b9f2f9f2
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:788332838494:certificate/f3f09866-c1cf-4294-ad53-a56ce342ef48
  labels:
    app: matchvote
    env: prod
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: matchvote
              servicePort: 80
